--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,7 @@ body {
 
 .tankcol {
   background-color: #e9ecef; 
+  /* background-color: #f8f9fa;  */
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -89,3 +90,50 @@ body {
 }
 
 
+
+
+/* shape style */
+
+.shape-card {
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+}
+
+.shape-title {
+  font-weight: bold;
+  font-size: 1.5rem;
+  background-color: rgb(58, 202, 181);
+  color: white;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.shape-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.shape-individual-card {
+  max-width: 18rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.value-text {
+  color: blue;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.btn-primary {
+  transition: background-color 0.3s;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
